# Qt7z

./: CMakeLists.txt
Qt7z/: qt7z.pri
Qt7z/7zip/C/: AesOpt.c
